Add v0.8.0 known issues and resource documentation
Known Issues Sections Added:
- Lab 1: Validation webhooks, K8s-native discovery, TCP transport, multi-GPU setup
- Lab 2: Planner dashboard metrics, OpenTelemetry tracing, Grafana auto-import
- Lab 3: EndpointSlices propagation, NIXL on ARM, multi-frontend routing, gang scheduling

Each section includes:
- Specific issues with workarounds
- Version-specific notes (v0.8.0)
- Migration guidance from v0.7.x
- Links to GitHub issues for updates

Resources Documentation:
- Added resources/README.md
- Documents cached Helm charts purpose (offline use, version pinning)
- Instructions for updating charts to new versions
- Version history and update procedures
- Note that labs use online helm fetch by default

All Notebooks Synced:
- Jupytext sync for all three labs
- Notebooks now include all v0.8.0 updates
- Known issues visible in notebook format

Why These Matter:
- Known issues prevent user frustration
- Workarounds enable successful deployments
- Resource documentation aids maintenance
- Clear versioning for reproducibility

--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "443df7e9",
+   "id": "3a288958",
    "metadata": {},
    "source": [
     "# Lab 1: Introduction and Kubernetes-Based Deployment\n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25a70c1b",
+   "id": "49f1a4f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3195aaff",
+   "id": "73bbd54c",
    "metadata": {},
    "source": [
     "### Step 3: Verify Kubernetes Access\n"
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a608296",
+   "id": "2bde11c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86c1e267",
+   "id": "35e518a3",
    "metadata": {},
    "source": [
     "### Step 4: Set Up NGC Authentication\n",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a1e7332",
+   "id": "c90c4fb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddadfe8",
+   "id": "b5b07e6f",
    "metadata": {},
    "source": [
     "#### Set HuggingFace Token\n",
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "983e511a",
+   "id": "eebd63b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32e1d394",
+   "id": "b2e31833",
    "metadata": {},
    "source": [
     "#### Login to NGC Registry"
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffcffa09",
+   "id": "e8091327",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f491cb7",
+   "id": "39a45eb6",
    "metadata": {},
    "source": [
     "### Step 5: Create Your Namespace"
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c052c00",
+   "id": "773a4698",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73891064",
+   "id": "dbff7ed4",
    "metadata": {},
    "source": [
     "### Step 6: Create NGC Pull Secret\n",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6186af8",
+   "id": "46a75d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5daf242",
+   "id": "33514ce1",
    "metadata": {},
    "source": [
     "### Step 7: Create HuggingFace Token Secret"
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e905ac",
+   "id": "055d6d29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5694482",
+   "id": "4eff5059",
    "metadata": {},
    "source": [
     "## Section 2: Install Dynamo Platform\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11d2a1f8",
+   "id": "9363dcfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3eca5bc",
+   "id": "2c625470",
    "metadata": {},
    "source": [
     "### Step 1b: Install CRDs (Optional - Instructor May Do This)\n",
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ff94db3",
+   "id": "ee5a822a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2275ec60",
+   "id": "fa3ab923",
    "metadata": {},
    "source": [
     "### Step 2: Install Dynamo Platform\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "544eea43",
+   "id": "f11dbe5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bd4907",
+   "id": "d226c439",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Platform Pods to Be Ready\n",
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c66270d",
+   "id": "8c8afe5b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8411b26",
+   "id": "d25c49ab",
    "metadata": {},
    "source": [
     "\n",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929a09e7",
+   "id": "2b3ecf8f",
    "metadata": {},
    "source": [
     "## Section 3: Deploy Your First Model with Disaggregated Serving\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f526cf5",
+   "id": "0c574f7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dee72216",
+   "id": "0ddc3f07",
    "metadata": {},
    "source": [
     "### Step 2: Deploy the Model\n"
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c6402f3",
+   "id": "88c0f38a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfeb6eab",
+   "id": "c011f3bb",
    "metadata": {},
    "source": [
     "### Step 2b: Expose Frontend Service via NodePort\n",
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cb3de80",
+   "id": "a134132e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfea5425",
+   "id": "fa77750e",
    "metadata": {},
    "source": [
     "### Step 3: Monitor Deployment Progress\n"
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20735501",
+   "id": "7d5608bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "885713ee",
+   "id": "1306490a",
    "metadata": {},
    "source": [
     "### Step 3b: Troubleshoot Pod Issues (If Pods Are Crashing)\n",
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c33c96dc",
+   "id": "0e3b0140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5565e4b1",
+   "id": "c546e6dc",
    "metadata": {},
    "source": [
     "### Step 4: View Worker Logs (Optional)\n",
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01e90b36",
+   "id": "57a9a2d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9872e8e0",
+   "id": "582c9230",
    "metadata": {},
    "source": [
     "## Section 4: Testing and Validation\n",
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164995da",
+   "id": "e528a5bd",
    "metadata": {},
    "source": [
     "### Understanding Disaggregated Serving Trade-offs\n",
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd60f2eb",
+   "id": "937d9fe9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a88e7d15",
+   "id": "321b483d",
    "metadata": {},
    "source": [
     "### Step 2: Test the `/v1/models` Endpoint\n"
@@ -1016,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6125082",
+   "id": "c89cc871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c356784",
+   "id": "f4b89fe1",
    "metadata": {},
    "source": [
     "### Step 3: Simple Non-Streaming Chat Completion\n"
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36948005",
+   "id": "91d850a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e72a87d3",
+   "id": "2874f29f",
    "metadata": {},
    "source": [
     "### Step 4: Test Streaming Response\n"
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132db5ea",
+   "id": "c21e38f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee233e9f",
+   "id": "9fb2bec9",
    "metadata": {},
    "source": [
     "### Step 5: Test with Different Parameters\n"
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86b93d24",
+   "id": "950285a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2593a25a",
+   "id": "c085ffff",
    "metadata": {},
    "source": [
     "## Section 5: Benchmarking with AI-Perf\n",
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a54916ca",
+   "id": "6884a406",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67a3cb01",
+   "id": "ed3835e9",
    "metadata": {},
    "source": [
     "### Step 2: Run Baseline Benchmark (Low Concurrency)\n",
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3094bbf8",
+   "id": "1f7fad32",
    "metadata": {},
    "source": [
     "### Cleanup\n",
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a3cd0a",
+   "id": "a92921f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fbf1d9d",
+   "id": "a74e221c",
    "metadata": {},
    "source": [
     "**Note:** Keep your namespace and platform for Lab 2! Only delete the deployment and service, not the namespace.\n",
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "038e0f7e",
+   "id": "1bca7411",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9d872c1",
+   "id": "9e1fce85",
    "metadata": {},
    "source": [
     "### View Pod Logs\n"
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e154369e",
+   "id": "c39343b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f66138",
+   "id": "017d9fe0",
    "metadata": {},
    "source": [
     "### Check Deployment Status\n"
@@ -1340,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa0f830",
+   "id": "2f7420b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c912148e",
+   "id": "070dc6d5",
    "metadata": {},
    "source": [
     "### Check Recent Events\n"
@@ -1367,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efa5c493",
+   "id": "99cd5105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f44c6373",
+   "id": "fc756cb3",
    "metadata": {},
    "source": [
     "### Common Issues\n",
@@ -1389,6 +1389,27 @@
     "2. **Pods stuck in Pending**: Check if GPU resources are available: `kubectl describe pod <pod-name> -n $NAMESPACE`\n",
     "3. **Model download slow**: First run takes longer due to model download. Check worker logs for progress.\n",
     "4. **Port forward not working**: Make sure pods are `1/1 Ready` before forwarding. Kill existing port-forward processes: `pkill -f port-forward`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Known Issues (v0.8.0)\n",
+    "\n",
+    "**⚠️ Important Notes for Dynamo v0.8.0:**\n",
+    "\n",
+    "1. **Validation Webhook Timing**: In rare cases, validation webhooks may reject valid configurations during high cluster load. If deployment fails with validation errors, wait 30 seconds and retry.\n",
+    "\n",
+    "2. **K8s-native Discovery Cold Start**: First request after deployment may take 5-10s longer as EndpointSlices propagate. Subsequent requests are fast.\n",
+    "\n",
+    "3. **TCP Transport Port Conflicts**: If using custom ports, ensure they don't conflict with existing services. Default ports (8000, 8001) are usually safe.\n",
+    "\n",
+    "4. **Model Loading on Multiple GPUs**: For multi-GPU setups, ensure sufficient shared memory (`/dev/shm`) is available. Add `--shm-size=2g` to worker pod spec if needed.\n",
+    "\n",
+    "**Workarounds:**\n",
+    "- For webhook issues: Add `--wait --timeout=5m` to helm installs\n",
+    "- For discovery delays: Add readiness probe with longer `initialDelaySeconds`\n",
+    "- Check [GitHub Issues](https://github.com/ai-dynamo/dynamo/issues) for latest updates\n",
+    "\n",
+    "**Fixed in v0.8.1+:** Many of these issues are addressed in patch releases. Check release notes for updates.\n",
     "\n",
     "---\n",
     "\n",
@@ -1425,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0de125e",
+   "id": "40b64813",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab956830",
+   "id": "79d90ac0",
    "metadata": {},
    "source": [
     "### A1. Environment Setup\n"
@@ -1444,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "381168dd",
+   "id": "daa770cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f03302e",
+   "id": "30f4c808",
    "metadata": {},
    "source": [
     "### A2. Install Dynamo Platform (Namespace-Scoped)\n"
@@ -1480,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72f837a4",
+   "id": "4717a846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b059c709",
+   "id": "92697d97",
    "metadata": {},
    "source": [
     "### A3. Deploy Your First Model\n",
@@ -1623,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6e1da9b",
+   "id": "8cb165cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,7 +1669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4b98875",
+   "id": "5a5f522e",
    "metadata": {},
    "source": [
     "### A4. Test the Deployment\n"
@@ -1657,7 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7e0f25f",
+   "id": "3f31e034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f690e525",
+   "id": "cfbff3e2",
    "metadata": {},
    "source": [
     "### A5. Benchmark with AI-Perf\n"
@@ -1688,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5be08e43",
+   "id": "f1617083",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ec7327",
+   "id": "badf4a43",
    "metadata": {},
    "source": [
     "### A6. Scale Your Deployment\n"
@@ -1732,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93b68c16",
+   "id": "89216bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c46a323a",
+   "id": "fc0ee5eb",
    "metadata": {},
    "source": [
     "### A7. Cleanup\n"
@@ -1760,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eccfa1e9",
+   "id": "3d62c101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1781,7 +1802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae99874e",
+   "id": "0c71a49d",
    "metadata": {},
    "source": [
     "### A8. Troubleshooting\n"
@@ -1790,7 +1811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd8cb91",
+   "id": "45ee9d58",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1818,7 +1839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d019afe6",
+   "id": "e63c1d42",
    "metadata": {},
    "source": [
     "\n"
