--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e99eea41",
+   "id": "030997f8",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Dynamo with Multi-GPU/Multi-Node Serving\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab7c3ab4",
+   "id": "5fb6f701",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b6fc744",
+   "id": "e4be0de7",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS Message Bus\n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4208a53",
+   "id": "f4b00a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a44de4f",
+   "id": "b1cc74a6",
    "metadata": {},
    "source": [
     "### Step 3: Install etcd Coordination Layer\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba8738d8",
+   "id": "8fd478fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60947c3b",
+   "id": "8514b741",
    "metadata": {},
    "source": [
     "### Step 4: Verify Grove Infrastructure\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9954006",
+   "id": "3d1b846b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a405089c",
+   "id": "561b781d",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0aa7c3d",
+   "id": "009417fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82c008d7",
+   "id": "528ba079",
    "metadata": {},
    "source": [
     "---\n",
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9193a55f",
+   "id": "ac440aa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7ac067e",
+   "id": "fba7808e",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fb8af08",
+   "id": "5a444ea2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437cf63f",
+   "id": "53b62695",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c2d7770",
+   "id": "30908968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ead576b",
+   "id": "d26b01d3",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9695ab",
+   "id": "fea6f6b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd057b5",
+   "id": "38d1a9d5",
    "metadata": {},
    "source": [
     "### Step 5: Verify NATS and NIXL Integration"
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "371b617f",
+   "id": "cc19eb2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce655023",
+   "id": "37d87ac3",
    "metadata": {},
    "source": [
     "---\n",
@@ -754,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3817b02e",
+   "id": "68e0bfb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7411bc4",
+   "id": "475ea21a",
    "metadata": {},
    "source": [
     "### Step 2: Understanding NATS Metrics\n",
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc250fee",
+   "id": "1439ad91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88179888",
+   "id": "d032995c",
    "metadata": {},
    "source": [
     "---\n",
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be114f3",
+   "id": "10840250",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db8f1d39",
+   "id": "9354a0e8",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "213430df",
+   "id": "bf09999f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea8bf2fa",
+   "id": "0e66c13d",
    "metadata": {},
    "source": [
     "### etcd Health Check\n",
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "469a2701",
+   "id": "05e21158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d106b6a",
+   "id": "948cfeb9",
    "metadata": {},
    "source": [
     "---\n",
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d69478a",
+   "id": "937754b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e36e733",
+   "id": "6b6ea0e3",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a1d1da1",
+   "id": "ada3b4c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a065f4c9",
+   "id": "46077080",
    "metadata": {},
    "source": [
     "### Step 3: Remove Distributed Infrastructure (Optional)\n",
@@ -1224,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c30191d1",
+   "id": "45c61156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,9 +1251,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8ef566d",
+   "id": "31414d85",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "## Known Issues (v0.8.0 Distributed Serving)\n",
+    "\n",
+    "**⚠️ Distributed Deployment Issues:**\n",
+    "\n",
+    "1. **K8s-native Discovery Propagation**: EndpointSlices may take 5-15 seconds to propagate in large clusters (20+ nodes). First requests may fail with \"no available workers\" until discovery completes.\n",
+    "\n",
+    "2. **NIXL KV Cache Transfer on ARM**: RDMA support on ARM-based nodes (Graviton, Ampere) is experimental in v0.8.0. Fall back to TCP transport if encountering issues.\n",
+    "\n",
+    "3. **Multi-Frontend KV-Aware Routing**: In some edge cases with >10 frontend replicas, routing metadata may be stale for 1-2 seconds, resulting in suboptimal cache hits (not failures, just less efficient).\n",
+    "\n",
+    "4. **NATS/etcd Compatibility**: If mixing K8s-native and NATS/etcd modes in the same cluster, ensure workers use consistent discovery method. Mixed modes are not supported.\n",
+    "\n",
+    "5. **Worker Gang Scheduling**: In v0.8.0, workers must all be ready before accepting traffic. If one worker pod fails, the entire deployment may be blocked. Use `kubectl describe dynamographdeployment` to debug.\n",
+    "\n",
+    "**Workarounds:**\n",
+    "- Discovery delays: Add `--wait-for-workers-timeout=30s` flag to frontend\n",
+    "- NIXL issues: Set `NIXL_TRANSPORT=tcp` env var to force TCP mode\n",
+    "- Routing staleness: Reduce frontend replicas to 3-5 for optimal cache awareness\n",
+    "- Gang scheduling: Use pod disruption budgets and ensure adequate node resources\n",
+    "\n",
+    "**Migration from v0.7.x:**\n",
+    "- K8s-native discovery is backward compatible\n",
+    "- Existing NATS/etcd deployments continue to work\n",
+    "- Can upgrade in-place, but test K8s-native in staging first\n",
+    "\n",
     "---\n",
     "\n",
     "## Summary\n",
@@ -1329,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d0ed272",
+   "id": "582aa036",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33d728ff",
+   "id": "195a460c",
    "metadata": {},
    "source": [
     "### etcd Not Starting"
@@ -1355,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1624b4d9",
+   "id": "8fee4081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1aed0b0",
+   "id": "387d5d2a",
    "metadata": {},
    "source": [
     "### Workers Not Connecting to Distributed Infrastructure"
@@ -1381,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d50c327a",
+   "id": "6b8cbe3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e26f68",
+   "id": "c30e27eb",
    "metadata": {},
    "source": [
     "### No Cache Sharing Observed\n",
