--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a69d7a9",
+   "id": "12900d51",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33f44ea4",
+   "id": "d358f1a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42bb62f3",
+   "id": "c964d50c",
    "metadata": {},
    "source": [
     "### Step 2: Verify Monitoring Stack is Running\n",
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6074e94a",
+   "id": "68795800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff906bb",
+   "id": "026bf5f6",
    "metadata": {},
    "source": [
     "---\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7914c818",
+   "id": "e2b705c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a940e83d",
+   "id": "5e2c162d",
    "metadata": {},
    "source": [
     "### Step 2: Check if PodMonitors Were Created\n",
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57caa180",
+   "id": "8b255b9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "166371e5",
+   "id": "e6f2b73c",
    "metadata": {},
    "source": [
     "### Step 3: Label PodMonitors for Prometheus Discovery\n",
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bab6b31",
+   "id": "604d3aeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "893ba79f",
+   "id": "de967364",
    "metadata": {},
    "source": [
     "### Step 4: Manually Test Metrics Endpoint\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ce1cc19",
+   "id": "1d63e7a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20231741",
+   "id": "7d2b7da0",
    "metadata": {},
    "source": [
     "### Step 5: Send Test Traffic to Generate Metrics\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b200d75d",
+   "id": "ea5b9dcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4250818",
+   "id": "916d7936",
    "metadata": {},
    "source": [
     "---\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edcd61fa",
+   "id": "393a5f4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b1310f",
+   "id": "2505805a",
    "metadata": {},
    "source": [
     "---\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0a05607",
+   "id": "3ad4487e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f107764",
+   "id": "e6dd7a01",
    "metadata": {},
    "source": [
     "---\n",
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d53d7d6",
+   "id": "acb77e3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74a62948",
+   "id": "d27a6794",
    "metadata": {},
    "source": [
     "### Access Planner Dashboard"
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11bd5f25",
+   "id": "f2414de5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1b4237a",
+   "id": "c65beacb",
    "metadata": {},
    "source": [
     "### Key Planner Metrics\n",
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac5d71b",
+   "id": "5e882044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2e2eaaf",
+   "id": "9fbaba25",
    "metadata": {},
    "source": [
     "### What Tracing Shows You\n",
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d467105",
+   "id": "b32c150b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2912fc6",
+   "id": "c109be63",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4721d082",
+   "id": "99868d1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,9 +893,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55c9f10d",
+   "id": "96df5268",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "## Known Issues (v0.8.0 Observability)\n",
+    "\n",
+    "**⚠️ Monitoring-Specific Issues:**\n",
+    "\n",
+    "1. **Planner Dashboard Initial Load**: The Planner dashboard (new in v0.8.0) may show \"No data\" for the first 2-3 minutes after deployment. Metrics start appearing once requests flow through the system.\n",
+    "\n",
+    "2. **OpenTelemetry Trace Sampling**: Default trace sampling is 10% to reduce overhead. For debugging, increase sampling rate in deployment annotations: `opentelemetry.io/sample-rate: \"1.0\"`.\n",
+    "\n",
+    "3. **Grafana Dashboard Auto-Import Delay**: ConfigMaps with `grafana_dashboard: \"1\"` label may take 30-60 seconds to appear in Grafana. Refresh the dashboards list if not immediately visible.\n",
+    "\n",
+    "4. **PodMonitor Label Selectors**: Ensure your PodMonitor `matchLabels` exactly match the pod labels. Case-sensitive. Use `kubectl describe podmonitor` to debug.\n",
+    "\n",
+    "**Workarounds:**\n",
+    "- For missing metrics: Check PodMonitor status: `kubectl get podmonitors -n $NAMESPACE -o yaml`\n",
+    "- For tracing issues: Verify OTLP endpoint is reachable: `kubectl logs <pod> | grep -i otel`\n",
+    "- Dashboard not loading: Manually import JSON from ConfigMap\n",
+    "\n",
+    "**New in v0.8.0:** Unified tracing and Planner observability are production-ready but may have edge cases. Report issues to the team.\n",
+    "\n",
     "---\n",
     "\n",
     "## Summary\n",
@@ -932,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e19082e",
+   "id": "553784eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "401618b2",
+   "id": "ddbd26c1",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -960,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b425d8",
+   "id": "bbd71743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1993fa70",
+   "id": "9d289284",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -988,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8760da57",
+   "id": "552b4a8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1024,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aed76b31",
+   "id": "ab314fca",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -1012,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b72054e",
+   "id": "23033fea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af99b06",
+   "id": "0bdd9a2e",
    "metadata": {},
    "source": [
     "---\n",
